--- a/Translations/German/text-effectCity-change.xml
+++ b/Translations/German/text-effectCity-change.xml
@@ -57,83 +57,83 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_LANDOWNERS_HONEY</zType>
-		<Translation>Landowner Honey</Translation>
+		<Translation>Landbesitzer Honig</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_LANDOWNERS_OLIVE</zType>
-		<Translation>Landowner Olive</Translation>
+		<Translation>Landbesitzer Oliven</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_CHAMPIONS_WINE</zType>
-		<Translation>Champion Wine</Translation>
+		<Translation>Wettkämpfer Wein</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_CHAMPIONS_DYE</zType>
-		<Translation>Champion Dye</Translation>
+		<Translation>Wettkämpfer Färbemittel</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_STATESMEN_PEARL</zType>
-		<Translation>Statesmen Pearls</Translation>
+		<Translation>Staatsmänner Perlen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_STATESMEN_WINE</zType>
-		<Translation>Statesmen Wine</Translation>
+		<Translation>Staatsmänner Wein</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_PATRONS_GEM</zType>
-		<Translation>Patrons Gems</Translation>
+		<Translation>Schutzherren Edelsteine</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_PATRONS_INCENSE</zType>
-		<Translation>Patrons Incense</Translation>
+		<Translation>Schutzherren Weihrauch</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_CLERICS_INCENSE</zType>
-		<Translation>Clerics Incense</Translation>
+		<Translation>Geistliche Weihrauch</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_CLERICS_LAVENDER</zType>
-		<Translation>Clerics Lavender</Translation>
+		<Translation>Geistliche Lavendel</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_SAGES_LAVENDER</zType>
-		<Translation>Sages Lavender</Translation>
+		<Translation>Weise Lavendel</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_SAGES_SALT</zType>
-		<Translation>Sages Salt</Translation>
+		<Translation>Weise Salz</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_TRADERS_OLIVE</zType>
-		<Translation>Traders Olives</Translation>
+		<Translation>Kaufleute Oliven</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_TRADERS_PEARL</zType>
-		<Translation>Traders Pearl</Translation>
+		<Translation>Kaufleute Perlen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_ARTISANS_DYE</zType>
-		<Translation>Artisans Dye</Translation>
+		<Translation>Kunsthandwerker Färbemittel</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_ARTISANS_GEM</zType>
-		<Translation>Artisans Gem</Translation>
+		<Translation>Kunsthandwerker Edelsteine</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_RIDERS_SALT</zType>
-		<Translation>Riders Salt</Translation>
+		<Translation>Reiter Salz</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_RIDERS_FUR</zType>
-		<Translation>Riders Fur</Translation>
+		<Translation>Reiter Felle</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_HUNTERS_FUR</zType>
-		<Translation>Hunters Fur</Translation>
+		<Translation>Jäger Felle</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_LUXURY_HUNTERS_HONEY</zType>
-		<Translation>Hunters Honey</Translation>
+		<Translation>Jäger Honig</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_FAMILYCLASS_STATESMEN_SEAT_DECREE</zType>
@@ -293,7 +293,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_SPECIALIST_MASTER</zType>
-		<Translation>Lehmeister-Spezialist</Translation>
+		<Translation>Lehrmeister-Spezialist</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_SPECIALIST_ELDER</zType>
