--- a/Translations/German/text-family-change.xml
+++ b/Translations/German/text-family-change.xml
@@ -8,7 +8,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_SARGONID</zType>
-		<Translation>Sargonid~Sargonids~Sargonid</Translation>
+		<Translation>Sargonide~Sargoniden~Sargonide</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_ADASI</zType>
@@ -24,15 +24,15 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_CHALDEAN</zType>
-		<Translation>Chaldean~Chaldeans~Chaldean</Translation>
+		<Translation>Chaldäer~Chaldäer~Chaldäer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_AMORITE</zType>
-		<Translation>Amorite~Amorites~Amorite</Translation>
+		<Translation>Amoriter~Amoriter~Amoriter</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_KASSITE</zType>
-		<Translation>Kassite~Kassites~Kassite</Translation>
+		<Translation>Kassite~Kassiten~Kassite</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_ISIN</zType>
@@ -40,7 +40,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_BARCID</zType>
-		<Translation>Barcid~Barcids~Barcid</Translation>
+		<Translation>Barkide~Barkiden~Barkide</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_MAGONID</zType>
@@ -48,7 +48,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_HANNONID</zType>
-		<Translation>Hannonid~Hannonids~Hannonid</Translation>
+		<Translation>Magonide~Magoniden~Magonide</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_DIDONIAN</zType>
@@ -56,11 +56,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_RAMESSIDE</zType>
-		<Translation>Ramesside~Ramessides~Ramesside</Translation>
+		<Translation>Ramesside~Ramessiden~Ramesside</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_THUTMOSID</zType>
-		<Translation>Thutmosid~Thutmosids~Thutmosid</Translation>
+		<Translation>Thutmosi~Thutmosen~Thutmosi</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_AMARNA</zType>
@@ -72,11 +72,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_ARGEAD</zType>
-		<Translation>Argead~Argeads~Argead</Translation>
+		<Translation>Argeade~Argeaden~Argeade</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_ALCMAEONID</zType>
-		<Translation>Alcmaeonid~Alcmaeonids~Alcmaeonid</Translation>
+		<Translation>Alkmaionide~Alkmaioniden~Alkmaionide</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_CYPSELID</zType>
@@ -84,7 +84,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_SELEUCID</zType>
-		<Translation>Seleucid~Seleucids~Seleucid</Translation>
+		<Translation>Seleukide~Seleukiden~Seleukide</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_ACHAEMENID</zType>
@@ -92,11 +92,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_ARSACID</zType>
-		<Translation>Arsacid~Arsacids~Arsacid</Translation>
+		<Translation>Achämenide~Achämeniden~Achämenide</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_SASANID</zType>
-		<Translation>Sasanid~Sasanids~Sasanid</Translation>
+		<Translation>Sassanide~Sassaniden~Sassanide</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_MIHRANID</zType>
