--- a/Translations/German/text-improvementClass-change.xml
+++ b/Translations/German/text-improvementClass-change.xml
@@ -121,6 +121,6 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENTCLASS_HOLY_SITE</zType>
-		<Translation>Heilige Stadt~eine Heilige Stadt~Heiligen Städten</Translation>
+		<Translation>Heilige Stadt~eine Heilige Stadt~Heiligen Stätten</Translation>
 	</Entry>
 </Root>
