--- a/Translations/German/text-relationship-change.xml
+++ b/Translations/German/text-relationship-change.xml
@@ -131,7 +131,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_PLOTTING_AGAINST_VERB</zType>
-		<Translation>eginnt Verschwörung gegen</Translation>
+		<Translation>Beginnt Verschwörung gegen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_MADE_HEIR_BY</zType>
