--- a/Translations/German/text-helptext-change.xml
+++ b/Translations/German/text-helptext-change.xml
@@ -4355,15 +4355,15 @@ Hold [{1_key}] to see Unit ZOCs.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_FAMILYCLASS_OPINION_PREFERENCES</zType>
-		<Translation>Opinion Preferences:</Translation>
+		<Translation>Meinung Vorlieben:</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_FAMILYCLASS_NATIONS_WITH_CLASS</zType>
-		<Translation>Nations with this Family Class:</Translation>
+		<Translation>Reiche mit dieser Familien Klasse:</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_FAMILYCLASS_CHARACTER_COMMON_TRAITS</zType>
-		<Translation>Common Traits:</Translation>
+		<Translation>Gewöhnliche Merkmale:</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_FAMILYCLASS_OPINION_LEADER_HEIR</zType>
