- fixed "Berittener Bogenschütze"

--- a/Translations/German/text-unit-change.xml
+++ b/Translations/German/text-unit-change.xml
@@ -88,7 +88,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_UNIT_HORSE_ARCHER</zType>
-		<Translation>Berittener Bögenschütze~einen Berittener Bögenschütze~Berittene Bögenschützen</Translation>
+		<Translation>Berittener Bogenschütze~einen Berittener Bogenschütze~Berittene Bogenschützen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_UNIT_CAMEL_ARCHER</zType>
